# NHS_survey_dashboard

./: .gitignore  README.md  app.py  pyproject.toml
analysis/: __init__.py  analyse.py  cli.py  paths.py  pipeline_legacy.py  squash.py  verify.py
analysis/baselines/: 2024_outputs.sha256
analysis/legacy_2024/: app.py
config/: settings.py  urls.py
dashboard/: admin.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
data/: comments_2024.csv
data/artifacts/2024/: age.csv  complete_tags.csv  gender.csv  lgbtq.csv  merged_survey.csv  occupation_group.csv  service_line.csv  staff_group.csv
data/inputs/2024/excel/: age.xlsx  bme.xlsx  occupation_group.xlsx  service_line.xlsx
legacy/: .gitignore  README.md  analysis.ipynb  analysis.py  cli.py  convert.py  responses.txt  sample.csv  thematic_analysis.ipynb
legacy/data/: bme.csv  complete.csv  disability.csv  division.csv  merged_survey.csv  payband.csv
legacy/data/excel/: disability.xlsx  division.xlsx  gender.xlsx  lgbtq.xlsx  payband.xlsx  staff_group.xlsx
legacy/metadata/: themes_with_descriptions.json
templates/dashboard/: home.html
templates/registration/: login.html  password_change_done.html  password_change_form.html
